# given-names

./: .gitignore  pyproject.toml
data/ssa_data/: README.md  babies_born_by_year.csv
given_names/: util.py
scripts/: download_data.py
