[project]
name = "given-names"
version = "0.1.0"
authors = [{ name = "Adam Huganir", email = "adam@huganir.com" }]
description = "Python tools for working with given names (anglo-centric)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "notebook>=7.3.3",
    "tqdm>=4.67.1",
]
urls = { Homepage = "https://github.com/adam-huganir/given-names" }


[dependency-groups]
dev = [
    "notebook>=7.3.3",
    "ruff>=0.11.4",
]

[tool.setuptools]
py-modules = ["given_names"]